Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29160

QSystemTrayIcon does not reappear after Explorer crash/restart

XMLWordPrintable

    • 38f740e4de9a313fd33984bd54834c56dc2316c4

      I have installed Qt 5.0.0 Commercial and tried the systray example. Compiling it and starting it does work. But I also have tested the explorer crash/restart scenario which does not work. The already added systray icon on Windows 7 and Windows XP (tested on both platforms) does not reappear after restarting an explorer.exe.

      To replicate this:

      1. Compile the systray example (32bit) and start it. The sample program is not started with elevated rights (no UAC required).
      2. open up task manager and kill all explorer.exe processes of current user
      3. use task manager to start a new explorer.exe

      The systray icon should reappear, but it does not.

      Now I have downloaded Qt 4.7.4 and tried the same systray sample. In that version it still works. Afterwards I have downloaded Qt 4.8.4 and tried the same. Also OK in this version.

      Is it possible to make it work in Qt 5.0.x?

      I have found an older bugt QTBUG-4417 which added the Vista feature which is also in version 4.7.4. So it seems to be another change that made the TaskbarCreated feature inside Qt does not work any more.

        For Gerrit Dashboard: QTBUG-29160
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            stefans2 StefanScherer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes